pitower/kubernetes/apps/ai/kagent/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent
spec:
  hostnames:
  - kagent.pitower.link
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
    namespace: networking
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kagent-ui
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
